base/src/test/resources/failure/levels/wrong-level.aya.txt
In file $FILE:4:18 ->

  2 | ulevel u
  3 | hlevel h
  4 | def neg (A : Type u u) : Type (lsuc h) (lsuc u) => A -> Empty
                        ^^

Error: I don't want a ulevel here, please use the other one
In file $FILE:4:51 ->

  2 | ulevel u
  3 | hlevel h
  4 | def neg (A : Type u u) : Type (lsuc h) (lsuc u) => A -> Empty
                                                              ^---^ h <= h + 1, u + 1 <= u + 1

Error: Cannot solve some level equation(s)
What are you doing?
